--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ XSBC-Pexip-Original-Maintainer: Ubuntu Hardened Developers <ubuntu-hardened@list
 XSBC-Original-Maintainer: J. Tang <jtang@tresys.com>
 Build-Depends: debhelper (>= 5), cdbs
 Standards-Version: 3.7.2
-XS-Pexip-Upstream: http://ftp.debian.org/debian/ jessie
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ stretch
 
 Package: selinux
 Architecture: all
